--- a/styles/linkreads.css
+++ b/styles/linkreads.css
@@ -1,7 +1,7 @@
 .card {
 	border: 1px solid #ddd;
 	border-radius: 8px;
-	overflow: hidden;
+	overflow: scroll;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	margin-bottom: 20px;
 	width: auto;
