--- a/styles/stylesnav.css
+++ b/styles/stylesnav.css
@@ -16,8 +16,18 @@
     top: 0;
     width: 100%;
     z-index: 1000;
+    
   }
   
+  .nav a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
   ul {
     list-style-type: none;
   }
@@ -110,6 +120,7 @@
   .bars:after {
     top: -5px;
   }
+
   
   /* Tablet menu */
   @media all and (min-width: 468px) {
