--- a/style/gamingtax.css
+++ b/style/gamingtax.css
@@ -13,6 +13,7 @@
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	margin-bottom: 20px;
 	max-width: 380px;
+	max-width: 500px;
 	width: 100%;
 	background-color: #fff;
 	display: block;
