--- a/style/menu.css
+++ b/style/menu.css
@@ -273,7 +273,7 @@
     display: none;
 }
 .content{
-    font-family: sans-serif;
+    font-family: serif;
     position: fixed;
     background: #004080;
     height: 100vh;
