--- a/style/gamingtax.css
+++ b/style/gamingtax.css
@@ -1,30 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&family=Roboto:wght@400;500;700&display=swap');
+
+
 .content
 {
+	font-family: 'Roboto', sans-serif;
 	height: 100%;
 	overflow: scroll;
+    display: block;
 }
 .content::-webkit-scrollbar{
     display:none;
 }
 .card {
-	border: 1px solid #ddd;
+	font-family: 'Roboto', sans-serif;
+    border: 1px solid #ddd;
 	border-radius: 8px;
 	overflow: auto;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	margin-bottom: 20px;
-	max-width: 380px;
 	max-width: 500px;
 	width: 100%;
 	background-color: #fff;
 	display: block;
 	justify-content: center;
+    margin: 5px 20px auto 5px;
+    
 }
 .card-header {
 	background-color: #004080;
 	color: #fff;
 	padding: 10px;
 	text-align: center;
-	font-weight: bold;
+	font-weight: 700;
 }
 .card-body {
 	padding: 5px;
@@ -58,4 +64,13 @@ input {
 	text-align: right;
 	font-size: 16px;
 	width: 120px;
+	border-radius: 8px;
+	border: 1px solid #b2b2b2;
+	padding: 0px 5px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
