--- a/style/cash-flow.css
+++ b/style/cash-flow.css
@@ -6,7 +6,7 @@
 	font-family: 'Roboto', sans-serif;
 	height: 100%;
 	overflow: scroll;
-    display: flex;
+    display: block;
     
 }
 .content::-webkit-scrollbar{
@@ -23,22 +23,8 @@
 	background-color: #fff;
 	display: block;
 	justify-content: center;
-    margin: 10px 10px auto 10px;
+	margin-top: 10px;
     
-}
-
-.cashflowvariace{
-	font-family: 'Roboto', sans-serif;
-    border: 1px solid #ddd;
-	border-radius: 8px;
-	overflow: auto;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	max-width: 500px;
-	width: 100%;
-	background-color: #fff;
-	display: none; /* todo */
-	justify-content: center;
-    margin: 10px 10px auto 10px;
 }
 
 .card-header {
@@ -73,7 +59,7 @@ td:nth-child(2) {
 input {
 	text-align: right;
 	font-size: 16px;
-	width: 50%;
+	width: 70%;
 	border-radius: 8px;
 	border: 1px solid #b2b2b2;
 	padding: 0px 5px;
@@ -89,13 +75,49 @@ input::-webkit-inner-spin-button {
 .calculation{
     text-align: right;
 	font-size: 16px;
-	width: 50%;
+	width: 70%;
     border-radius: 8px;
     border: 1px solid green;
     padding: 0px 5px;
-    margin: 0 50%;
+    margin: 0 30%;
         
 }
+
+
+/* Tooltip container */
+.tooltip {
+	position: relative;
+	display: inline-block;
+	border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+  }
+  
+  /* Tooltip text */
+  .tooltip .tooltiptext {
+	visibility: hidden;
+	width: 170px;
+	background-color: black;
+	color: #fff;
+	text-align: center;
+	padding: 5px 0;
+	border-radius: 6px;
+	bottom: 100%;
+  	left: 50%;
+  	margin-left: -85px;
+   
+	/* Position the tooltip text - see examples below! */
+	position: absolute;
+	z-index: 1;
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+	visibility: visible;
+	width: 170px;
+  	bottom: 100%;
+  	left: 50%;
+  	margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+  }
+
 
 .negCminusB{
 	display:block
