--- a/style/gamingtax.css
+++ b/style/gamingtax.css
@@ -6,7 +6,7 @@
 	font-family: 'Roboto', sans-serif;
 	height: 100%;
 	overflow: scroll;
-    display: block;
+	display: block;
 }
 .content::-webkit-scrollbar{
     display:none;
@@ -17,12 +17,12 @@
 	border-radius: 8px;
 	overflow: auto;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	max-width: 500px;
+	max-width: 480px;
 	width: 100%;
 	background-color: #fff;
 	display: block;
 	justify-content: center;
-    margin: 5px 20px auto 5px;
+    margin-top: 10px;
     
 }
 .card-header {
@@ -45,10 +45,11 @@ th, td {
 	text-align: left;
 }
 td:nth-child(1) {
-	width: 170px;
+	width: 190px;
 	padding: 10px;
 }
 td:nth-child(2) {
+	width: 160px;
 	text-align: right;
 	padding: 10px;
 }
@@ -74,3 +75,4 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
