--- a/style/link-reads.css
+++ b/style/link-reads.css
@@ -23,7 +23,7 @@
 	background-color: #fff;
 	display: block;
 	justify-content: center;
-    margin: 10px 10px auto 10px;
+    margin-top: 10px;
     
 }
 .card-header {
@@ -68,7 +68,7 @@ th {
 	border-bottom: 1px solid #eeeeee;
     text-align: left;
     font-size: 16px;
-    max-width: 10%;
+    max-width: 70px;
     padding: 10px;
 }
 
@@ -77,14 +77,14 @@ td {
 	border-bottom: 1px solid #eeeeee;
     text-align: right;
     font-size: 16px;
-    max-width: 10%;
+    max-width: 80px;
     padding: 10px;
 }
 
 input {
 	text-align: right;
 	font-size: 16px;
-	width: 120px;
+	width: 100%;
 	border-radius: 8px;
 	border: 1px solid #b2b2b2;
 	padding: 0px 5px;
@@ -99,3 +99,13 @@ input::-webkit-inner-spin-button {
 	text-align: left;
 }
 
+.calculation{
+    text-align: right;
+	font-size: 16px;
+	width: 100%;
+    border-radius: 8px;
+    border: 1px solid green;
+    padding: 0px 5px;
+    margin: 0%;
+        
+}
