--- a/style/link-reconciliation.css
+++ b/style/link-reconciliation.css
@@ -22,7 +22,7 @@
 	background-color: #fff;
 	display: block;
 	justify-content: center;
-    margin: 10px 10px auto 10px;
+    margin-top: 10px;
     
 }
 .card-header {
@@ -60,7 +60,7 @@ td:nth-child(2) {
 input {
 	text-align: right;
 	font-size: 16px;
-	width: 120px;
+	width: 70%;
 	border-radius: 8px;
 	border: 1px solid #b2b2b2;
 	padding: 0px 5px;
@@ -70,4 +70,14 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+.calculation{
+    text-align: right;
+	font-size: 16px;
+	width: 70%;
+    border-radius: 8px;
+    border: 1px solid green;
+    padding: 0px 5px;
+    margin: 0 30%;
+        
 }
