--- a/style/link-reads.css
+++ b/style/link-reads.css
@@ -18,7 +18,7 @@
 	border-radius: 8px;
 	overflow: auto;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	max-width: 850px;
+	width: 850px;
 	width: 100%;
 	background-color: #fff;
 	display: block;
@@ -44,7 +44,7 @@
 	background-color: #fff;
 	display: block;
 	justify-content: center;
-	margin: 10px 10px auto 10px;
+	margin-top: 10px;
 }
 .card-header {
 	background-color: #004080;
