--- a/style/cashier-balance.css
+++ b/style/cashier-balance.css
@@ -1,20 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&family=Roboto:wght@400;500;700&display=swap');
 
 
-.content
-{
+.content {
 	font-family: 'Roboto', sans-serif;
 	height: 100%;
 	overflow: scroll;
     display: block;
-    
 }
 .content::-webkit-scrollbar{
     display:none;
 }
 .card {
 	font-family: 'Roboto', sans-serif;
-  border: 1px solid #ddd;
+    border: 1px solid #ddd;
 	border-radius: 8px;
 	overflow: auto;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -23,8 +21,7 @@
 	background-color: #fff;
 	display: block;
 	justify-content: center;
-	margin-top: 10px;
-    
+    margin-top: 10px;
 }
 
 .card-header {
