--- a/style/premium-loyalty.css
+++ b/style/premium-loyalty.css
@@ -37,28 +37,54 @@
 	padding: 5px;
 }
 
-input {
-	text-align: center;
+.input-group {
 	font-size: 16px;
-	width: 70px;
-	border-radius: 8px;
-	border: 1px solid #b2b2b2;
-	padding: 0px 5px;
+	position: relative;
+	--primary: #2196f3;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+.input {
+color: #000;
+padding: 1rem;
+border: 1px solid #9e9e9e;
+border-radius: 10px;
+transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+text-align: center;
+width: 300px;
+font-size: 20px;
+
 }
 
-table {
+.label {
+position: absolute;
+top: 1rem;
+left: 1rem;
+color: #000;
+pointer-events: none;
+transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input:focus {
+border: 1px solid var(--primary);
+}
+
+.input:is(:focus, :valid) ~ label {
+transform: translateY(-120%) scale(0.7);
+background-color: #fff;
+padding-inline: 0.3rem;
+color: var(--primary);
+left: 0rem;
+}
+
+.rates {
 	border-collapse: collapse;
-	width: 100%;
+	width: auto;
+	margin-left: auto;
+  	margin-right: auto;
 }
 
 th {
-	border-top: 1px solid #eeeeee;
+	border-top: 0px solid #eeeeee;
 	border-bottom: 1px solid #eeeeee;
 	text-align: center;
     padding: 10px;
@@ -77,4 +103,72 @@ td:nth-child(1) {
 
 td:nth-child(2), td:nth-child(3), td:nth-child(4) {
 	width: 80px;
+}
+
+.cost{
+	width: 100%;
+	border-collapse: collapse;
+	font-weight: 700
+}
+
+
+.table0{
+	width: 300px;
+	border-collapse: collapse;
+	margin-left: auto;
+  	margin-right: auto;
+	
+}
+
+.table1{
+	width: 420px;
+	border-collapse: collapse;
+	margin-left: auto;
+  	margin-right: auto;
+	
+}
+
+
+.selector{
+	padding: 0px;
+	width: auto;
+	border-top: 0px solid #eeeeee;
+	border-bottom: 0px solid #eeeeee;
+}
+
+.button {
+	border: 1px solid #004080;
+	color: #000;
+	background-color: #2196f3;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	width: 140px;
+	border-radius: 40px;
+}
+
+
+
+.moduletext{
+	margin-left: 80px;
+	
+}
+
+.button:hover {
+	border: 1px solid #004080;
+	color: #000;
+	background-color: #004080;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	width: 140px;
+	border-radius: 40px;
 }
