--- a/style/cash-flow.css
+++ b/style/cash-flow.css
@@ -24,7 +24,8 @@
 	display: block;
 	justify-content: center;
 	margin-top: 10px;
-    
+	margin-left: auto;
+  	margin-right: auto;
 }
 
 .card-header {
