--- a/style/premium-loyalty.css
+++ b/style/premium-loyalty.css
@@ -22,6 +22,8 @@
 	display: block;
 	justify-content: center;
     margin-top: 10px;
+	margin-left: auto;
+  	margin-right: auto;
     
 }
 .card-header {
