--- a/style/web-apps.css
+++ b/style/web-apps.css
@@ -23,6 +23,8 @@
 	display: block;
 	justify-content: center;
 	margin-top: 10px;
+	margin-left: auto;
+  	margin-right: auto;
 }
 
 
@@ -38,6 +40,8 @@
 	display: block;
 	justify-content: center;
 	margin-top: 10px;
+	margin-left: auto;
+  	margin-right: auto;
 }
 .gat-card {
 	border: 1px solid #ddd;
@@ -51,6 +55,8 @@
 	display: block;
 	justify-content: center;
 	margin-top: 10px;
+	margin-left: auto;
+  	margin-right: auto;
 }
 .jackpots-card {
 	border: 1px solid #ddd;
@@ -64,6 +70,8 @@
 	display: block;
 	justify-content: center;
 	margin-top: 10px;
+	margin-left: auto;
+  	margin-right: auto;
 }
 
 
