--- a/style/link-reads.css
+++ b/style/link-reads.css
@@ -18,7 +18,7 @@
 	border-radius: 8px;
 	overflow: auto;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	max-width: 850px;
+	width: 850px;
 	background-color: #fff;
 	display: block;
 	justify-content: center;
