--- a/style/meters.css
+++ b/style/meters.css
@@ -26,6 +26,7 @@
     margin-left: auto;
   	margin-right: auto;
 }
+
 .card-header {
 	background-color: #004080;
 	color: #fff;
@@ -72,4 +73,103 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+.mobile-view {
+	display: none;
+}
+/* Mobile menu */
+@media all and (max-width: 850px){
+	.card {
+		display:none;
+	}
+
+.mobile-view {
+	font-family: 'Roboto', sans-serif;
+    border: 1px solid #ddd;
+	border-radius: 8px;
+	overflow: auto;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	max-width: 500px;
+	width: 100%;
+	background-color: #fff;
+	display: block;
+	justify-content: center;
+    margin-top: 10px;
+    margin-left: auto;
+  	margin-right: auto;
+}
+.table0{
+	width: 300px;
+	border-collapse: collapse;
+	margin-left: auto;
+  	margin-right: auto;
+}
+.table0 td{
+	overflow: hidden;
+    white-space: nowrap;
+	border-top: 0px solid #eeeeee;
+	border-bottom: 0px solid #eeeeee;
+}
+.input-group {
+	font-size: 16px;
+	position: relative;
+	--primary: #004080;
+}
+
+.input {
+	color: #004080;
+	padding: 1rem;
+	border: 1px solid #004080;
+	border-radius: 10px;
+	transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+	text-align: center;
+	width: 300px;
+	font-size: 20px;
+
+}
+
+.label {
+	position: absolute;
+	top: 1rem;
+	left: 1rem;
+	color: #004080;
+	pointer-events: none;
+	transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input:focus {
+	border: 1px solid #004080;
+}
+
+.input:is(:focus, :valid) ~ label {
+	transform: translateY(-120%) scale(0.7);
+	background-color: #fff;
+	padding-inline: 0.3rem;
+	color: #004080;
+	left: 0rem;
+}
+.results {
+    color: #004080;
+    padding: 1rem;
+    border: 1px solid #004080; /* Same border properties as input */
+    border-radius: 10px;
+    transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+    text-align: center;
+    font-size: 20px;
+	width: 300px;
+	margin-left: 0%;
+	
+	display: block;
+}
+
+.results-label{
+	position: relative;
+	background-color: #fff;
+	padding-inline: 0.3rem;
+	color: #004080;
+	pointer-events: none;
+	left: -12rem;
+	top: .5rem;
+	font-size: 11.2px;
+}
 }
